<?xml version="1.0"?>
<package format="2">
  <name>shutdown_gz</name>
  <version>0.1.0</version>
  <description>Spawn a node to shutdown gazebo</description>
  <maintainer email="sloretz@openrobotics.org">sloretz</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo</depend>
  <depend>roscpp</depend>
</package>
